Activation Key procedure clarified further.

--- a/modules/client-configuration/pages/activation-keys.adoc
+++ b/modules/client-configuration/pages/activation-keys.adoc
@@ -44,30 +44,29 @@ However, you *must* use commas for Red Hat Products.
 * If the field is left empty, a random string is generated.
 ====
 +
+. In the [guimenu]``Usage`` add number of times the key can be used, or leave it blank for unlimited usage.
 . In the [guimenu]``Base Channels`` drop-down box, select the appropriate base software channel, and allow the relevant child channels to populate.
-  For more information, see xref:reference:admin/setup-wizard.adoc#vle.webui.admin.wizard.products[] and xref:administration:custom-channels.adoc[].
-. Select the child channels you need (for example, the mandatory {susemgr} tools and updates channels).
+  For more information, see xref:reference:admin/setup-wizard.adoc[] and xref:administration:custom-channels.adoc[].
+. Select the [guimenu]``Child Channels`` you need (for example, the mandatory {susemgr} tools and updates channels).
 . Check the [guimenu]``Add-On System Types`` check box if you need to enable any of the options. 
+  For more information about system types, xref:client-configuration:system-types.adoc[].
 . We recommend you leave the [guimenu]``Contact Method`` set to [guimenu]``Default``.
+  For more information about contact methds, see xref:client-configuration:contact-methods-intro.adoc[].
 . We recommend you leave the [guimenu]``Universal Default`` setting unchecked.
 . Click btn:[Create Activation Key] to create the activation key.
-. Check the [guimenu]``Configuration File Deployment`` check box to enable configuration management for this key, and click btn:[Update Activation Key] to save this change.
-+
-[NOTE]
-====
-The [guimenu]``Configuration File Deployment`` check box does not appear until after you have created the activation key.
-Ensure you go back and check the box if you need to enable configuration management.
-====
+. After the activation key is created, the page shows additional checkbox [guimenu]``Configuration File Deployment`` below the list of [guimenu]``Add-On System Types``.
+  To enable deploying configuration files to systems on registration , select this check box.
+. Click btn:[Update Activation Key] to save the change.
 
-When created, tabs such as
+When the activation key creation is completed, additional tabs appear at the top of the page.
+Use them to check and set additional features. 
+These tabs are: 
 
 * [guimenu]``Packages``
 * [guimenu]``Configuration``
 * [guimenu]``Groups``
 * [guimenu]``Activated Systems``
 * [guimenu]``AppStreams`` (available whenever a modular channel is associated with the activation key)
-
-allow you to check and set additional features.
 
 
 [[activation-keys-reactivation]]
