--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-vm-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-deployment-vm-mlm.adoc
@@ -21,7 +21,7 @@ All tools are included in these images greatly simplifying deployment.
 
 Images for {productname} {productnumber} are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
 
-[NOTE]
+[IMPORTANT]
 ====
 Remember to resize the default size of the partition before deploying.
 For more information on preparing raw images, see:
