--- a/modules/client-configuration/pages/activation-keys.adoc
+++ b/modules/client-configuration/pages/activation-keys.adoc
@@ -49,7 +49,7 @@ However, you *must* use commas for Red Hat Products.
   For more information, see xref:reference:admin/setup-wizard.adoc[] and xref:administration:custom-channels.adoc[].
 . Select the [guimenu]``Child Channels`` you need (for example, the mandatory {susemgr} tools and updates channels).
 . Check the [guimenu]``Add-On System Types`` check box if you need to enable any of the options. 
-  For more information about system types, xref:client-configuration:system-types.adoc[].
+  For more information about system types, see xref:client-configuration:system-types.adoc[].
 . We recommend you leave the [guimenu]``Contact Method`` set to [guimenu]``Default``.
   For more information about contact methds, see xref:client-configuration:contact-methods-intro.adoc[].
 . We recommend you leave the [guimenu]``Universal Default`` setting unchecked.
