--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -216,6 +216,13 @@ As a result of this behavior:
 * The [path]``/var/lib/containers/storage/volumes/uyuni-proxy-squid-cache/`` directory can be small on the {productname} Server compared to the proxy.
   For a guide to size estimation, see the <<server-hardware-requirements>> section.
 
+[NOTE]
+====
+In general, {suse} recommends to adjust the value for the cache directory to about 60 % of available free space.
+Users can adjust the [option]``cache_dir`` option in the [path]``squid.conf`` manually.
+====
+
+
 
 
 [[installation-postgresql-requirements]]
