create xref to the hardware file for proxy

--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-mlm.adoc
@@ -45,44 +45,7 @@ The container host supplies the necessary resources such as CPU, memory, and sto
 
 == Hardware Requirements for the Proxy
 
-This table shows the hardware requirements for deploying {productname} Proxy.
-
-[cols="1,3,2", options="header"]
-.Proxy Hardware Requirements
-|===
-
-| Hardware
-| Details
-| Recommendation
-
-| CPU
-| {x86_64}, {arm}
-| Minimum 2 dedicated 64-bit CPU cores
-
-| RAM
-| Minimum
-| 2 GB
-
-|
-| Recommended
-| 8 GB
-
-| Disk Space
-| [path]``/`` (root directory)
-| Minimum 40 GB
-
-|
-| [path]``/var/lib/containers/storage/volumes``
-| Minimum 150 GB
-
-|===
-
-// /srv-www
-// * Storage requirments should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
-
-// |
-// | [path]``/var/lib/containers/storage/volumes/var-cache`` (Squid)
-// | Minimum 100 GB
+For more information about hardware requirements for deploying {productname} Proxy, see xref:installation-and-upgrade:hardware-requirements.adoc#proxy-hardware-requirements[].
 
 
 
