--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -167,6 +167,7 @@ For more information about managing a large number of clients, see xref:speciali
 ====
 
 
+[[proxy-hardware-requirements]]
 == Proxy Requirements
 
 [cols="1,3,2", options="header"]
