replace SLE with SL micro for 5.1

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -35,13 +35,13 @@ endif::[]
 ifeval::[{mlm-content} == true]
 ** Installation and Deployment
 *** xref:install-server.adoc[Server]
-**** xref:container-deployment/mlm/server-deployment-mlm.adoc[{productname} Deployment on {sle-micro}]
+**** xref:container-deployment/mlm/server-deployment-mlm.adoc[{productname} Deployment on {sl-micro}]
 **** xref:container-deployment/mlm/server-deployment-vm-mlm.adoc[Server Deployment as Virtual Machine - KVM]
 **** xref:container-deployment/mlm/server-deployment-vmdk-mlm.adoc[Server Deployment as Virtual Machine - VMware]
 **** xref:container-deployment/mlm/server-air-gapped-deployment-mlm.adoc[Air-gapped Deployment]
 **** xref:install-pubcloud.adoc[Public Cloud Deployment]
 *** xref:install-proxy.adoc[Proxy]
-**** xref:container-deployment/mlm/proxy-deployment-mlm.adoc[{productname} Proxy Deployment on {sle-micro}]
+**** xref:container-deployment/mlm/proxy-deployment-mlm.adoc[{productname} Proxy Deployment on {sl-micro}]
 **** xref:container-deployment/mlm/proxy-deployment-vm-mlm.adoc[Proxy Deployment as Virtual Machine - KVM]
 **** xref:container-deployment/mlm/proxy-deployment-vmdk-mlm.adoc[Proxy Deployment Virtual Machine - VMware]
 **** xref:container-deployment/mlm/proxy-k3s-deployment-mlm.adoc[Proxy Deployment on K3s]
