Apply suggestions from code review
Co-authored-by: Ornela Marić <omaric@suse.com>

--- a/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-hostname-rename.adoc
@@ -80,7 +80,7 @@ mgradm restart
 
 == Reconfigure Proxy
 
-Any proxy must be reconfigured.
+Every proxy must be reconfigured.
 The new server certificate and key must be copied to the proxy.
 For more information, see xref:installation-and-upgrade:install-proxy.adoc[].
 
@@ -88,7 +88,7 @@ For more information, see xref:installation-and-upgrade:install-proxy.adoc[].
 [IMPORTANT]
 ====
 If you use PXE boot through a proxy, you must check the configuration settings of the proxy.
-If you use PXE boot through Non-containerized {productname} Proxy 4.3 [systemitem]``tftpsync`` needs to be reconfigured.
+If you use PXE boot through non-containerized {productname} Proxy 4.3, [systemitem]``tftpsync`` needs to be reconfigured.
 
 On the container host, execute:
 ----
