Fixing the links to other documents.

--- a/modules/administration/pages/backup-restore.adoc
+++ b/modules/administration/pages/backup-restore.adoc
@@ -106,7 +106,7 @@ mgrctl exec -ti -- mgr-sync refresh --refresh-channels
 The [command]``smdba`` tool is used for managing a local PostgreSQL database.
 It allows you to back up and restore your database, and manage backups.
 It can also be used to check the status of your database, and perform administration tasks, such as restarting.
-For more information about the [command]``smdba``  tool, see xref:reference:cli-smdba[].
+For more information about the [command]``smdba``  tool, see xref:reference:cli-smdba.adoc[].
 
 
 The [command]``smdba`` tool works with local PostgreSQL databases only, it does not work with remotely accessed databases, or Oracle databases.
