Fixed anotehr broken link.

--- a/modules/administration/pages/channel-management.adoc
+++ b/modules/administration/pages/channel-management.adoc
@@ -55,7 +55,7 @@ spacewalk-remove-channel -c <channel-name>
 ----
 
 ifeval::[{mlm-content} == true]
-* For more information about deleting channels manually, see xref:removing-channels.adoc[].
+* For more information about deleting channels manually, see xref:administration:removing-channels.adoc[].
 endif::[]
 
 * For information about deleting custom channels, see xref:administration:custom-channels.adoc[].
