--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -220,7 +220,9 @@ As a result of this behavior:
 [NOTE]
 ====
 In general, {suse} recommends to adjust the value for the cache directory to about 60 % of available free space.
-Users can adjust the [option]``cache_dir`` option in the [path]``squid.conf`` manually.
+Users can set the [option]``cache_dir`` option in the [path]``squid.conf`` manually.
+
+For more information, see xref:specialized-guides:large-deployments/tuning.adoc#tune_proxy[].
 ====
 
 
