--- a/modules/administration/pages/ssl-certs-selfsigned.adoc
+++ b/modules/administration/pages/ssl-certs-selfsigned.adoc
@@ -35,7 +35,7 @@ The private key and the server certificate can be found in the directory `/root/
 The name of the last directory depends on the hostname used with `--set-hostname` option.
 
 Deploy or import the new certificate and key with the [command]``mgr-ssl-cert-setup`` tool.
-For more information about importing the just generated certificate, see as xref:administration:ssl-certs-imported.adoc#ssl-certs-import-replace[].
+For more information about importing the just generated certificate, see xref:administration:ssl-certs-imported.adoc#ssl-certs-import-replace[].
 
 
 
