--- a/modules/specialized-guides/pages/large-deployments/tuning.adoc
+++ b/modules/specialized-guides/pages/large-deployments/tuning.adoc
@@ -756,7 +756,7 @@ This command will save a copy of displayed data in the `pidstat-memory.log` file
 | Value default        | 100
 | Value recommendation | 60 % of available free space
 | Location             | [path]``/etc/squid/squid.conf``
-| Example              | cache_dir ufs /var/cache/squid 15000 16 256
+| Example              | cache_dir aufs /var/cache/squid 15000 16 256
 | After changing       | 
 | More information     | [path]``/etc/squid/squid.conf.documented''
 |===
