manager 4.3: limit cache dir size to about 60% of free space (#3700)
* https://github.com/SUSE/spacewalk/issues/26396
* https://github.com/uyuni-project/uyuni-docs/pull/3693

* Update modules/specialized-guides/pages/large-deployments/tuning.adoc
* Apply suggestions from code review

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -140,6 +140,7 @@ For more information about managing a large number of clients, see xref:speciali
 ====
 
 
+[[proxy-hardware-requirements]]
 == Proxy Hardware Requirements
 
 [cols="1,1,1", options="header"]
@@ -186,6 +187,15 @@ As a result of this behavior:
 * By making the [path]``/var/cache/`` directory on the proxy the same size as [path]``/var/spacewalk/`` on the {productname} Server, you avoid a large amount of traffic after the first synchronization.
 * The [path]``/var/cache/`` directory can be small on the {productname} Server compared to the proxy.
     For a guide to size estimation, see the <<server-hardware-requirements>> section.
+
+
+[NOTE]
+====
+In general, {suse} recommends to adjust the value for the cache directory to about 60 % of available free space.
+Users can set the [option]``cache_dir`` option in the [path]``squid.conf`` manually.
+
+For more information, see xref:specialized-guides:large-deployments/tuning.adoc#tune_proxy[].
+====
 
 
 
