--- a/modules/installation-and-upgrade/pages/general-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/general-requirements.adoc
@@ -11,7 +11,7 @@ Before you begin installation, ensure that you have:
 
 [NOTE]
 ====
-The {sle-micro} {microversion} entitlement is included within the {productname} entitlement, so it does not require a separate registration key.
+The {sl-micro} {microversion} entitlement is included within the {productname} entitlement, so it does not require a separate registration key.
 ====
 
 The following section contains more information on these requirements.
