fix for tables and listing block

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -242,36 +242,6 @@ Five {productname} Proxy containers should be present and should be part of the 
 * proxy-ssh
 
 
-////
-[[installation-proxy-containers-services]]
-== Install container services on the host system
-ifeval::[{suma-content} == true]
-
-[NOTE]
-====
-[literal]``Containers Module`` is required to be available for container host on a {sles} machine.
-====
-endif::[]
-
-{productname} Proxy containers are using [literal]``podman`` and [literal]``systemd`` to run and manage all proxy containers.
-
-First step is to install the [literal]``mgrpxy`` utility provided by the package of the same name.
-
-ifeval::[{suma-content} == true]
-The [literal]``mgrpxy`` package is available in the {productname} Proxy product repositories.
-endif::[]
-
-ifeval::[{uyuni-content} == true]
-The [literal]``mgrpxy`` package is available in the container utils repository: pick the one matching the distribution in: https://download.opensuse.org/repositories/systemsmanagement:Uyuni:/Stable:/ContainerUtils/.
-endif::[]
-
-To install them run:
-
-----
-zypper in helm mgrpxy
-----
-////
-
 
 === Using a Custom Container Image for a Service
 
@@ -279,6 +249,8 @@ By default, the {productname} Proxy suite is configured to use the same image ve
 However, it is possible to override the default values for a specific service using the install parameters ending with [literal]``-tag`` and [literal]``-image``.
 
 For example:
+
+[source, shell]
 ----
 mgrpxy install podman --httpd-tag 0.1.0 --httpd-image registry.opensuse.org/uyuni/proxy-httpd /path/to/config.tar.gz
 ----
@@ -286,6 +258,8 @@ mgrpxy install podman --httpd-tag 0.1.0 --httpd-image registry.opensuse.org/uyun
 It adjusts the configuration file for the httpd service, where [path]``registry.opensuse.org/uyuni/proxy-httpds`` is the image to use and [literal]``0.1.0`` is the version tag, before restarting it.
 
 To reset the values to defaults, run the install command again without those parameters:
+
+[source, shell]
 ----
 mgrpxy install podman /path/to/config.tar.gz
 ----
