fix tables and lists

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -119,6 +119,7 @@ For detailed documentation on preparing your machines OS (virtual or physical), 
 . Click [systemitem]``Next`` to continue.
 . Select your registration method.
   For this example, we will register the proxy with {scclongform}.
+
 +
 
 .{productname} {productnumber} Proxy as an extension
@@ -152,6 +153,7 @@ This finalizes installation of {sle-micro} {microversion} and {productname} {pro
 .Procedure: Updating the System
 . Log in as *root*.
 . Run **transactional-update**:
+
 +
 
 [source, shell]
@@ -162,14 +164,20 @@ transactional-update
 . Reboot the system.
 . Log in as root.
 . Install the container utilities:
+
 +
+
 [source, shell]
 ----
 transactional-update pkg install mgrpxy mgrpxy-bash-completion
 ----
+
 +
-* Alternatively you may install [systemitem]``mgrpxy-zsh-completion`` or [systemitem]``mgrpxy-fish-completion``.
+
+Alternatively you may install [systemitem]``mgrpxy-zsh-completion`` or [systemitem]``mgrpxy-fish-completion``.
+
 +
+
 . Reboot the system.
 
 
@@ -181,16 +189,19 @@ However, if custom persistent storage is required for your infrastructure, use t
 This tool simplifies creating the container storage and Squid cache volumes.
 
 Use the command in the following manner:
+
 ----
 mgr-storage-proxy <storage-disk-device>
 ----
 
 For example:
+
 ----
 mgr-storage-proxy /dev/nvme1n1
 ----
 
 For more information, type:
+
 ----
 mgr-storage-proxy --help
 ----
@@ -223,16 +234,23 @@ Container can now be started with the [literal]`mgrpxy` command:
 .Procedure: Starting and Checking Proxy Status
 
 . Start the proxy by calling:
+
 +
+
 ----
 mgrpxy start
 ----
+
 . Check container status by calling:
+
 +
+
 ----
 mgrpxy status
 ----
+
 +
+
 Five {productname} Proxy containers should be present and should be part of the [literal]``proxy-pod`` container pod:
 
 * proxy-salt-broker
