--- a/modules/client-configuration/pages/repositories.adoc
+++ b/modules/client-configuration/pages/repositories.adoc
@@ -46,28 +46,33 @@ mgr_disable_local_repos: False
 
 After a client has completed onboarding, you can add local repositories to these locations:
 
+ifeval::[{suma-content} == true]
 [[local-repo-locations]]
 [cols="1,1", options="header"]
 .Local Repository Locations
 |===
-
-ifeval::[{suma-content} == true]
 | Client Operating System | Local Repository Directory
+
 | {sles} | [path]``/etc/zypp/repos.d``
 | {opensuse} | [path]``/etc/zypp/repos.d``
 | {sles} {es} | [path]``/etc/yum.repos.d/``
 | {rhel} and similar derivatives | [path]``/etc/yum.repos.d/``
 | {ubuntu} | [path]``/etc/apt/sources.list.d/``
 | {debian} | [path]``/etc/apt/sources.list.d/``
+|===
 endif::[]
 
 ifeval::[{uyuni-content} == true]
+[[local-repo-locations-uyuni]]
+[cols="1,1", options="header"]
+.Local Repository Locations
+|===
 | Client Operating System | Local Repository Directory
+
 | {sles} | [path]``/etc/zypp/repos.d``
 | {opensuse} | [path]``/etc/zypp/repos.d``
 | {rhel} and similar derivatives | [path]``/etc/yum.repos.d/``
 | {ubuntu} | [path]``/etc/apt/sources.list.d/``
 | {debian} | [path]``/etc/apt/sources.list.d/``
-endif::[]
-
 |===
+endif::[]
