fix for broken cjk

--- a/modules/client-configuration/pages/repositories.adoc
+++ b/modules/client-configuration/pages/repositories.adoc
@@ -32,6 +32,7 @@ If local repositories should stay enabled after onboarding, the following pillar
 
 Edit the ``/srv/pillar/top.sls`` file:
 
+[source, yaml]
 ----
 base:
   'minionid':
@@ -40,6 +41,7 @@ base:
 
 Edit the ``/srv/pillar/localrepos.sls`` file:
 
+[source, yaml]
 ----
 mgr_disable_local_repos: False
 ----
