--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -190,18 +190,21 @@ This tool simplifies creating the container storage and Squid cache volumes.
 
 Use the command in the following manner:
 
+[source,shell]
 ----
 mgr-storage-proxy <storage-disk-device>
 ----
 
 For example:
 
+[source, shell]
 ----
 mgr-storage-proxy /dev/nvme1n1
 ----
 
 For more information, type:
 
+[source, shell]
 ----
 mgr-storage-proxy --help
 ----
@@ -284,23 +287,3 @@ mgrpxy install podman /path/to/config.tar.gz
 
 This command first resets the configuration of all services to the global defaults and then reloads it.
 
-
-////
-[[installation-proxy-containers-firewall-rules]]
-== Allow network access for provided services on container host firewall
-
-
-{productname} Proxy containers work as so called node-port service.
-This means proxy container pod shares container host network TCP and UDP port space.
-For this reason container host firewall must be configured to accept incoming traffic on ports used by {productname} Proxy containers.
-Those ports are:
-
-- 69/UDP - TFTP
-- 80/TCP - HTTP
-- 443/TCP - HTTPS
-- 4505/TCP - Salt
-- 4506/TCP - Salt
-- 8022/TCP - SSH
-
-Continue with setting up the installed {productname} Proxy as a containers at xref:installation-and-upgrade:container-deployment/suma/proxy-container-setup.adoc[].
-////
