--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-suma.adoc
@@ -123,6 +123,7 @@ For detailed documentation on preparing your machines OS (virtual or physical), 
 . Click [systemitem]``Next`` to continue.
 . Select your registration method.
   For this example, we will register the server with {scclongform}.
+
 +
 
 .{productname} {productnumber} Proxy as an extension
@@ -155,6 +156,7 @@ This finalizes installation of {sle-micro} {microversion} and {productname} {pro
 .Procedure: Updating the System
 . Log in as *root*.
 . Run **transactional-update**:
+
 +
 
 [source, shell]
@@ -165,14 +167,20 @@ transactional-update
 . Reboot the system.
 . Log in as root.
 . Install the container utilities:
+
 +
+
 [source, shell]
 ----
 transactional-update pkg install mgrpxy mgrpxy-bash-completion
 ----
+
 +
+
 * Alternatively you may install [systemitem]``mgrpxy-zsh-completion`` or [systemitem]``mgrpxy-fish-completion``.
+
 +
+
 . Reboot the system.
 
 
@@ -183,17 +191,23 @@ This step is optional.
 However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-proxy`` tool. 
 This tool simplifies creating the container storage and Squid cache volumes.
 
-Use the command in the following manner: 
+Use the command in the following manner:
+
+[source, shell]
 ----
 mgr-storage-proxy <storage-disk-device>
 ----
 
-For example: 
+For example:
+
+[source, shell]
 ----
 mgr-storage-proxy /dev/nvme1n1
 ----
 
-For more information, type: 
+For more information, type:
+
+[source, shell]
 ----
 mgr-storage-proxy --help
 ----
@@ -250,12 +264,19 @@ This archive needs to be made available on the proxy container host.
 .Procedure: Copying the Proxy Configuration
 
 . Copy the configuration archive ([literal]``config.tar.gz``) generated in the previous step to the Proxy host:
+
 +
+
+[source, shell]
 ----
 scp config.tar.gz <proxy-FQDN>:/root
 ----
+
 . Install the Proxy with:
+
 +
+
+[source, shell]
 ----
 mgrpxy install podman config.tar.gz
 ----
@@ -271,16 +292,25 @@ Container can now be started with the [literal]`mgrpxy` command:
 .Procedure: Starting and Checking Proxy Status
 
 . Start the Proxy by calling:
+
 +
+
+[source, shell]
 ----
 mgrpxy start
 ----
+
 . Check container status by calling:
+
 +
+
+[source, shell]
 ----
 mgrpxy status
 ----
+
 +
+
 Five {productname} Proxy containers should be present and should be part of the [literal]``proxy-pod`` container pod:
 
 * proxy-salt-broker
