table fix and translation fix

--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -126,20 +126,31 @@ For more information about the monitoring formulas, see xref:specialized-guides:
 
 .Procedure: Manually Installing and Configuring Prometheus
 . On the monitoring server, install the [package]``golang-github-prometheus-prometheus`` package:
+
 +
+
+[source, shell]
 ----
 zypper in golang-github-prometheus-prometheus
 ----
+
 . Enable the Prometheus service:
+
 +
+
+[source, shell]
 ----
 systemctl enable --now prometheus
 ----
+
 . Check that the Prometheus interface loads correctly.
     In your browser, navigate to the URL of the server where Prometheus is installed, on port 9090 (for example, [literal]``http://example.com:9090``).
 . Open the configuration file at [path]``/etc/prometheus/prometheus.yml`` and add this configuration information.
     Replace `server.url` with your {productname} server URL and adjust `username` and `password` fields to match your {productname} credentials.
+
 +
+
+[source, yaml]
 ----
 # {productname} self-health metrics
 scrape_configs:
@@ -190,7 +201,10 @@ scrape_configs:
 ----
 . Save the configuration file.
 . Restart the Prometheus service:
+
 +
+
+[source, shell]
 ----
 systemctl restart prometheus
 ----
@@ -230,15 +244,23 @@ You can choose which dashboards to provision in the formula configuration page.
 .Procedure: Manually Installing Grafana
 
 . Install the [package]``grafana`` package:
+
 +
+
+[source, shell]
 ----
 zypper in grafana
 ----
+
 . Enable the Grafana service:
+
 +
+
+[source, shell]
 ----
 systemctl enable --now grafana-server
 ----
+
 . In your browser, navigate to the URL of the server where Grafana is installed, on port 3000 (for example, [literal]``http://example.com:3000``).
 . On the login page, enter ``admin`` for username and password.
 . Click btn:[Log in]. 
@@ -253,7 +275,9 @@ systemctl enable --now grafana-server
 . To import a dashboard click the btn:[+] icon in the side menu, and then click btn:[Import].
 . For {productname} server overview load the dashboard ID: ``17569``.
 . For {productname} clients overview load the dashboard ID: ``17570``.
+
 +
+
 image::monitoring_grafana_example.png[scaledwidth=80%]
 
 [NOTE]
@@ -312,7 +336,7 @@ To enable self-health monitoring on a proxy, you need to manually install export
 The following relevant metrics are collected on the {productname} Server.
 
 .Server statistics (port 80)
-[cols="40,15,45"]
+[cols="1, 1, 1", options="header"]
 |===
 |Metric |Type | Description
 
@@ -334,7 +358,7 @@ The following relevant metrics are collected on the {productname} Server.
 |===
 
 .PostgreSQL exporter (port 9187)
-[cols="45,15,40"]
+[cols="1,1,1", options="header"]
 |===
 |Metric |Type | Description
 
@@ -372,31 +396,21 @@ The following relevant metrics are collected on the {productname} Server.
 |===
 
 .JMX exporter (Tomcat port 5556, Taskomatic port 5557)
-[cols="45,15,40"]
+[cols="1,1,1", options="header"]
 |===
-|Metric |Type | Description
+|Metric | Type | Description
 
-|java_lang_Threading_ThreadCount
-|gauge
-|Number of active threads
-
-|java_lang_Memory_HeapMemoryUsage_used
-|gauge
-|Current heap memory usage
+|java_lang_Threading_ThreadCount | gauge |Number of active threads
+|java_lang_Memory_HeapMemoryUsage_used |gauge |Current heap memory usage
 |===
 
 .Server Message Queue (port 80)
-[cols="40,15,45"]
+[cols="1,1,1", options="header"]
 |===
-|Metric |Type | Description
+|Metric | Type | Description
 
-|message_queue_thread_pool_threads
-|counter
-|Number of message queue threads ever created
-
-|message_queue_thread_pool_threads_active
-|gauge
-|Number of currently active message queue threads
+|message_queue_thread_pool_threads | counter | Number of message queue threads ever created
+|message_queue_thread_pool_threads_active | gauge | Number of currently active message queue threads
 
 |message_queue_thread_pool_task_count
 |counter
@@ -408,7 +422,7 @@ The following relevant metrics are collected on the {productname} Server.
 |===
 
 .Salt Queue (port 80)
-[cols="40,15,45"]
+[cols="1,1,1", options="header"]
 |===
 |Metric |Type | Description
 
@@ -434,7 +448,7 @@ Every salt_queue value has a label named `queue` with the queue number as value.
 
 
 .Taskomatic Scheduler (port 9800)
-[cols="40,15,45"]
+[cols="1,1,1", options="header"]
 |===
 |Metric |Type | Description
 
@@ -580,13 +594,17 @@ This section demonstrates how to generate client/server certificates for Prometh
 .Procedure: Creating server/client TLS certificate
 
 . On the {productname} Server, at the command prompt, run following command:
+
 +
+
+[source, shell]
 ----
 rhn-ssl-tool --gen-server --dir="/root/ssl-build" --set-country="COUNTRY" \
 --set-state="STATE" --set-city="CITY" --set-org="ORGANIZATION" \
 --set-org-unit="ORGANIZATION UNIT" --set-email="name@example.com" \
 --set-hostname="minion.example.com" --set-cname="minion.example.com" --no-rpm
 ----
+
 Ensure that the [systemitem]``set-cname`` parameter is the fully qualified domain name (FQDN) of your Salt client.
 You can use the the [systemitem]``set-cname`` parameter multiple times if you require multiple aliases.
 
