--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/server-air-gapped-deployment-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/server-air-gapped-deployment-mlm.adoc
@@ -25,7 +25,7 @@ For more information about installing {productname} Server Virtual Machine, see 
 To upgrade {productname} Server, users should upgrade all packages in the system and follow the procedures defined in xref:container-management/updating-server-containers.adoc[Server Upgrade].
 
 
-=== Deploy {productname} on {sle-micro}
+=== Deploy {productname} on {sl-micro}
 
 {productname} also provides all the needed container images in RPM's that can be installed on the system.
 
@@ -34,8 +34,8 @@ To upgrade {productname} Server, users should upgrade all packages in the system
 User should make the needed RPM available on the internal network. That can be done by using a second {productname} Server or an RMT server.
 ====
 
-.Procedure: Install {productname} on SLE Micro in Air-gapped
-. Install SLE Micro
+.Procedure: Install {productname} on {sl-micro} in Air-gapped
+. Install {sl-micro}
 . Update the system
 . Install tools packages and image packages (replace $ARCH$ with the correct architecture)
 +
@@ -45,9 +45,9 @@ transactional-update pkg install mgradm* mgrctl* suse-manager-5.0-$ARCH$-server-
 ----
 +
 . Reboot.
-. Deploy {productname} with mgradm.
+. Deploy {productname} with [command]``mgradm``.
 
 
-For more detailed information about installing {productname} Server on {sle-micro}, see xref:container-deployment/mlm/server-deployment-mlm.adoc[Deploy Server as a Virtual Machine].
+For more detailed information about installing {productname} Server on {sl-micro}, see xref:container-deployment/mlm/server-deployment-mlm.adoc[Deploy Server as a Virtual Machine].
 
 To upgrade {productname} Server, users should upgrade all packages in the system and follow the procedures defined in xref:container-management/updating-server-containers.adoc[Server Upgrade].
