fix sle-micro -> sl-micro issues

--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-air-gapped-deployment-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-air-gapped-deployment-mlm.adoc
@@ -17,25 +17,28 @@ For more information about installing {productname} Proxy Virtual Machine, see x
 To upgrade {productname} Proxy, users should follow the procedures defined in xref:container-management/updating-proxy-containers.adoc[Proxy Upgrade].
 
 
-== Deploy {productname} on SLE Micro
+== Deploy {productname} on {sl-micro}
 
 {productname} also provides all the needed container images in RPM's that can be installed on the system.
 
-.Procedure: Install {productname} on SLE Micro in Air-gapped
-. Install SLE Micro.
+.Procedure: Install {productname} on {sl-micro} in Air-gapped
+. Install {sl-micro}.
 . Bootstrap the Proxy Host OS as a Client on {productname} Server.
 . Update the system.
 . Install tools packages and image packages (replace $ARCH$ with the correct architecture)
+
 +
+
 [source,shell]
 ----
 transactional-update pkg install mgrpxy* mgrctl* suse-manager-5.0-$ARCH$-proxy-*
 ----
-+
+
 . Reboot.
+
 . Deploy {productname} with mgrpxy.
 
 
-For more detailed information about installing {productname} Proxy on SLE Micro, see xref:container-deployment/mlm/proxy-deployment-mlm.adoc[Deploy Proxy as a Virtual Machine].
+For more detailed information about installing {productname} Proxy on {sl-micro}, see xref:container-deployment/mlm/proxy-deployment-mlm.adoc[Deploy Proxy as a Virtual Machine].
 
 To upgrade {productname} Proxy, users should follow the procedures defined in xref:container-management/updating-proxy-containers.adoc[Proxy Upgrade].
