--- a/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vm-mlm.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/mlm/proxy-deployment-vm-mlm.adoc
@@ -19,18 +19,14 @@ The preferred method for deploying {productnumber} Proxy is to use one of the fo
 All tools are included in these images simplifying deployment.
 ====
 
+// 2025-02-17, ke: as of today, suse-manager directory is still in use
 Images for {productname} {productnumber} Proxy are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
 
 [NOTE]
 ====
-For more information on preparing raw images, see:
+For more information on preparing raw images, see https://documentation.suse.com/sle-micro/6.1/html/Micro-deployment-raw-images-virtual-machines/index.html#deployment-preparing-configuration-device[].
 
-* link:https://documentation.suse.com/en-us/sl-micro/6.1/single-html/SL-Micro-deployment/#sec-raw-preparation[]
-* link:https://documentation.suse.com/en-us/sl-micro/6.1/single-html/SL-Micro-deployment/#cha-images-procedure[]
-
-For additional information on the self install images, see:
-
-* link:https://documentation.suse.com/en-us/sl-micro/6.1/single-html/SL-Micro-deployment/#cha-selfinstal-procedure[]
+For additional information on the self install images, see https://documentation.suse.com/sle-micro/6.1/html/Micro-deployment-selfinstall-images/index.html
 ====
 
 // FIXME more archs supported?
@@ -77,7 +73,7 @@ If you want to use a production environment and need background information abou
 [NOTE]
 ====
 [path]``/var/lib/containers/storage/volumes``
-Minimum 150 GB.  
+Minimum 150 GB.
 Storage requirements should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
 ====
 
