update tables as they were broken

--- a/modules/administration/pages/monitoring.adoc
+++ b/modules/administration/pages/monitoring.adoc
@@ -199,6 +199,7 @@ scrape_configs:
    - source_labels: [__meta_uyuni_scheme]
      target_label: __scheme__
 ----
+
 . Save the configuration file.
 . Restart the Prometheus service:
 
@@ -335,135 +336,72 @@ To enable self-health monitoring on a proxy, you need to manually install export
 
 The following relevant metrics are collected on the {productname} Server.
 
-.Server statistics (port 80)
-[cols="1, 1, 1", options="header"]
+.Server Statistics (Port 80)
+[cols="1,1,2", options="header"]
 |===
-|Metric |Type | Description
-
-|uyuni_all_systems
-|gauge
-|Number of all systems
-
-|uyuni_virtual_systems
-|gauge
-|Number of virtual systems
-
-|uyuni_inactive_systems
-|gauge
-|Number of inactive systems
-
-|uyuni_outdated_systems
-|gauge
-|Number of systems with outdated packages
+| Metric | Type | Description
+| uyuni_all_systems | gauge | Number of all systems
+| uyuni_virtual_systems | gauge | Number of virtual systems
+| uyuni_inactive_systems | gauge | Number of inactive systems
+| uyuni_outdated_systems | gauge | Number of systems with outdated packages
 |===
 
-.PostgreSQL exporter (port 9187)
-[cols="1,1,1", options="header"]
+.PostgreSQL Exporter (Port 9187)
+[cols="1,1,2", options="header"]
 |===
-|Metric |Type | Description
-
-|pg_stat_database_tup_fetched
-|counter
-|Number of rows fetched by queries
-
-|pg_stat_database_tup_inserted
-|counter
-|Number of rows inserted by queries
-
-|pg_stat_database_tup_updated
-|counter
-|Number of rows updated by queries
-
-|pg_stat_database_tup_deleted
-|counter
-|Number of rows deleted by queries
-
-|mgr_serveractions_completed
-|gauge
-|Number of completed actions
-
-|mgr_serveractions_failed
-|gauge
-|Number of failed actions
-
-|mgr_serveractions_picked_up
-|gauge
-|Number of picked-up actions
-
-|mgr_serveractions_queued
-|gauge
-|Number of queued actions
+| Metric | Type | Description
+| pg_stat_database_tup_fetched | counter | Number of rows fetched by queries
+| pg_stat_database_tup_inserted | counter | Number of rows inserted by queries
+| pg_stat_database_tup_updated | counter | Number of rows updated by queries
+| pg_stat_database_tup_deleted | counter | Number of rows deleted by queries
+| mgr_serveractions_completed | gauge | Number of completed actions
+| mgr_serveractions_failed | gauge | Number of failed actions
+| mgr_serveractions_picked_up | gauge | Number of picked-up actions
+| mgr_serveractions_queued | gauge | Number of queued actions
 |===
 
-.JMX exporter (Tomcat port 5556, Taskomatic port 5557)
-[cols="1,1,1", options="header"]
+.JMX Exporter (Tomcat Port 5556, Taskomatic Port 5557)
+[cols="1,1,2", options="header"]
 |===
-|Metric | Type | Description
-
-|java_lang_Threading_ThreadCount | gauge |Number of active threads
-|java_lang_Memory_HeapMemoryUsage_used |gauge |Current heap memory usage
-|===
-
-.Server Message Queue (port 80)
-[cols="1,1,1", options="header"]
-|===
-|Metric | Type | Description
-
-|message_queue_thread_pool_threads | counter | Number of message queue threads ever created
-|message_queue_thread_pool_threads_active | gauge | Number of currently active message queue threads
-
-|message_queue_thread_pool_task_count
-|counter
-|Number of tasks ever submitted
-
-|message_queue_thread_pool_completed_task_count
-|counter
-|Number of tasks ever completed
+| Metric | Type | Description
+| java_lang_Threading_ThreadCount | gauge | Number of active threads
+| java_lang_Memory_HeapMemoryUsage_used | gauge | Current heap memory usage
 |===
 
-.Salt Queue (port 80)
-[cols="1,1,1", options="header"]
+.Server Message Queue (Port 80)
+[cols="1,1,2", options="header"]
 |===
-|Metric |Type | Description
-
-|salt_queue_thread_pool_size
-|gauge
-|Number of threads created per {salt} queue
-
-|salt_queue_thread_pool_active_threads
-|gauge
-|Number of currently active {salt} threads per queue
-
-|salt_queue_thread_pool_task_total
-|counter
-|Number of tasks ever submitted per queue
-
-|salt_queue_thread_pool_completed_task_total
-|counter
-|Number of tasks ever completed per queue
-
+| Metric | Type | Description
+| message_queue_thread_pool_threads | counter | Number of message queue threads ever created
+| message_queue_thread_pool_threads_active | gauge | Number of currently active message queue threads
+| message_queue_thread_pool_task_count | counter | Number of tasks ever submitted
+| message_queue_thread_pool_completed_task_count | counter | Number of tasks ever completed
 |===
 
-Every salt_queue value has a label named `queue` with the queue number as value.
-
-
-.Taskomatic Scheduler (port 9800)
-[cols="1,1,1", options="header"]
+.Salt Queue (Port 80)
+[cols="1,1,2", options="header"]
 |===
-|Metric |Type | Description
-
-|taskomatic_scheduler_threads
-|counter
-|Number of scheduler threads ever created
-
-|taskomatic_scheduler_threads_active
-|gauge
-|Number of currently active scheduler threads
-
-|taskomatic_scheduler_completed_task_count
-|counter
-|Number of tasks ever completed
+| Metric | Type | Description
+| salt_queue_thread_pool_size | gauge | Number of threads created per {salt} queue
+| salt_queue_thread_pool_active_threads | gauge | Number of currently active {salt} threads per queue
+| salt_queue_thread_pool_task_total | counter | Number of tasks ever submitted per queue
+| salt_queue_thread_pool_completed_task_total | counter | Number of tasks ever completed per queue
 |===
+
+[NOTE]
+====
+Every `salt_queue` value has a label named `queue` with the queue number as value.
+====
+
+.Taskomatic Scheduler (Port 9800)
+[cols="1,1,2", options="header"]
+|===
+| Metric | Type | Description
+| taskomatic_scheduler_threads | counter | Number of scheduler threads ever created
+| taskomatic_scheduler_threads_active | gauge | Number of currently active scheduler threads
+| taskomatic_scheduler_completed_task_count | counter | Number of tasks ever completed
+|===
+
 
 
 === Monitoring Managed Systems
